  (Gabriel Scherer, review by Florian Angeletti, discussion with Daniel Bünzli)

- GPR#1017: ocamldoc, add an option to detect code fragments that could be
  transformed into a cross-reference to a known element.
  (Florian Angeletti, review and suggestion by David Allsopp)

- clarify ocamldoc text parsing error messages
  (Gabriel Scherer)

### Compiler distribution build system:

- MPR#7377: remove -std=gnu99 for newer gcc versions
  (Damien Doligez, report by ygrek)

- MPR#7452, GPR#1228: tweak GCC options to try to avoid the
  Skylake/Kaby lake bug
  (Damien Doligez, review by David Allsopp, Xavier Leroy and Mark Shinwell)

- GPR#693: fail on unexpected errors or warnings within caml_example
  environment.
  (Florian Angeletti)

- GPR#803: new ocamllex-based tool to extract bytecode compiler
  opcode information from C headers.
  (Nicolas Ojeda Bar)

- GPR#827: install missing mli and cmti files, new make target
  install-compiler-sources for installation of compiler-libs ml files
  (Hendrik Tews)

- GPR#887: allow -with-frame-pointers if clang is used as compiler on Linux
  (Bernhard Schommer)

- GPR#898: fix locale-dependence of primitive list order,
  detected through reproducible-builds.org.
  (Hannes Mehnert, review by Gabriel Scherer and Ximin Luo)

- GPR#907: Remove unused variable from the build system
  (Sébastien Hinderer, review by whitequark, Gabriel Scherer, Adrien Nader)

- GPR#911: Clarify the use of C compiler related variables in the build system.
  (Sébastien Hinderer, review by Adrien Nader, Alain Frisch, David Allsopp)

- GPR#919: use clang as preprocessor assembler if clang is used as compiler
  (Bernhard Schommer)

- GPR#927: improve the detection of hashbang support in the configure script
  (Armaël Guéneau)

- GPR#932: install ocaml{c,lex}->ocaml{c,lex}.byte symlink correctly
  when the opt target is built but opt.opt target is not.
  (whitequark, review by Gabriel Scherer)

- GPR#935: allow build in Android's termux